# abtest-tool

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  config.json  history.db  logging.yaml  mypy.ini  pyproject.toml  requirements.prod.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-release.yml  docs.yml  publish.yml  release.yml  smoke.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: Makefile  api_reference.rst  changelog.rst  conf.py  cookbook.rst  index.rst  quickstart.rst
plugins/: bayesian.py  connectors.py  export.py
scripts/: benchmark.py  fill_translations.py  safe_repo_fix.py  update_translations.sh
src/: __init__.py  analysis_api.py  cli.py  config.example.json  flags.py  flags_api.py  history.db  i18n.json  i18n.py  logic.py  main.py  metrics.py  migrations_runner.py  plugin_loader.py  resources.qss  ui_mainwindow.py  ui_wizard.py  utils.py  webhooks.py
src/abtest_core/: __init__.py  backends.py  bayes.py  cuped.py  engine.py  multiple.py  sequential.py  srm.py  stats_binomial.py  stats_continuous.py  stats_ratio.py  types.py  utils.py  validation.py
src/abtest_tool/: backends.py  plugin_loader.py
src/abtest_tool/plugins/: __init__.py  base.py
src/api/: analysis.py  flags.py
src/bandit/: strategies.py
src/pd_stub/: __init__.py
src/plots/: __init__.py  cumulative.py
src/pydantic/: __init__.py
src/stats/: ab_test.py
src/ui/: __init__.py  filters_panel.py  history_panel.py  login.py  main.py  resources.qrc  settings.py  ui_mainwindow.py  wizard.py
src/ui/widgets/: __init__.py  help.py
src/ui/wizard/: __init__.py  step_config.py  step_data.py  step_result.py  viewmodel.py  wizard.py
src/utils/: __init__.py  config.py  connectors.py  log_filters.py  net.py  safe_eval.py  template.py
tests/: test_api_integration.py  test_bayes_core.py  test_cli.py  test_connectors.py  test_cuped.py  test_flags.py  test_gui.py  test_gui_e2e.py  test_history_panel.py  test_i18n.py  test_jwt.py  test_logic.py  test_multiple.py  test_plots.py  test_sequential.py  test_settings.py  test_srm.py  test_stats_binomial.py  test_stats_continuous.py  test_stats_ratio.py  test_swagger.py  test_ui_bayes.py  test_ui_exports.py  test_validation.py
tests/data/: sample_binom.csv
tests/numpy/: __init__.py
tests/pandas/: __init__.py
tests/plugins/: test_loader.py
translations/: app_en.ts  app_ru.ts
