[tool.poetry]
name = "abtest-tool"
version = "1.0.0"
description = "GUI tool for A/B testing and sample size calculations"
authors = ["Nhimphu <nhimphu@example.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]
exclude = [
    "tests/**",
    ".github/**",
    "docs/**",
    "examples/**",
    "build/**",
    "dist/**",
    "src/pd_stub/**",
    "src/_pd_shadow_removed/**",
    "src/_np_shadow_removed/**",
    "src/pandas/**",
    "src/numpy/**"
]
include = [
    { path = "translations/**", format = "wheel" },
    { path = "translations/**", format = "sdist" },
    { path = "spec/**", format = "wheel" },
    { path = "spec/**", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "2.2.0"
plotly = "6.2.0"
pillow = "10.4.0"
pandas = "2.2.2"
PyQt6 = "6.9.1"
PyQt6-Qt6 = "6.9.1"
PyQt6_sip = "13.10.2"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
setuptools = "80.9.0"
tzdata = "2025.2"
Flask = "3.0.3"
Flask-JWT-Extended = "4.6.0"
flask-swagger-ui = "4.11.1"
prometheus-client = "0.20.0"
alembic = "1.13.1"
pydantic = "1.10.9"
matplotlib = { version = "3.10.3", optional = true }
scipy = { version = "1.13.0", optional = true }
sqlalchemy = { version = "2.0.30", optional = true }
statsmodels = { version = "*", optional = true }
psycopg2-binary = { version = "*", optional = true }
pymysql = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
gunicorn = { version = "*", optional = true }

[tool.poetry.extras]
viz = ["matplotlib"]
sci = ["scipy", "statsmodels"]
db = ["sqlalchemy", "psycopg2-binary", "pymysql"]
web = ["uvicorn", "gunicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
coverage = "7.5.0"
coverage-badge = "1.1.0"
sphinx = "7.2.6"
myst-parser = "2.0.0"
PySide6 = { version = "^6.7.2", python = ">=3.11,<3.13" }
ruff = "^0.5"
mypy = "^1.10"
pytest-benchmark = "^4.0"
hypothesis = "^6.112"
bandit = "^1.7"

[tool.poetry.scripts]
abtest-tool = "main:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "E401", "F401", "F841", "E731"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
disallow_subclassing_any = false
warn_return_any = false
no_implicit_reexport = false
strict_equality = false
exclude = '(^tests/|^src/ui/|^src/plots/|^src/stats/|^src/bandit/|^src/utils/|^plugins/|^src/cli.py|^src/main.py|^src/migrations\n_runner.py)'

[[tool.mypy.overrides]]
module = ["plotly.*", "pandas", "PySide6.*", "PyQt6.*", "matplotlib.*", "scipy.*", "yaml.*"]
ignore_missing_imports = true
